# hello-word-vcpkg

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  windows_activity_log.md
scripts/: clean-build.sh
scripts/windows/: Dockerfile  docker-compose.yml  setup-env.ps1
